--- a/doc/latex2/thesis.tex
+++ b/doc/latex2/thesis.tex
@@ -43,7 +43,7 @@
 
 
 % compile with pdflatex --shell-escape thesis.tex
-% makeindex main.nlo -s nomencl.ist -o thesis.nls
+% makeindex thesis.nlo -s nomencl.ist -o thesis.nls
 
 %opening
 \author{Fredrik E Pettersen\\ f.e.pettersen@fys.uio.no}
@@ -93,7 +93,7 @@
 \clearpage
 \include{analysis}
 
-\chapter{Physical application}
+\chapter{Physical application}\label{chapter:application}
 \clearpage
 \include{application}
 
