--- a/doc/latex2/introduction.tex
+++ b/doc/latex2/introduction.tex
@@ -1,7 +1,7 @@
 The diffusion equation governs a large number of physical processes on many different length scales. 
 Both heat diffusion through a wall and the Brownian motion of dust particles can be described by the diffusion equation. 
 In some diffusion processes a large number of particles will diffuse from a large volume into a small volume in such a way that only very few particles enter the smaller volume. 
-An example of this in the diffusion of the enzyme PKC$\gamma$ from the body of a brain cell via a dendrite of large volume into dendritic spines. 
+An example of this in the diffusion of the enzyme Protein Kinase C$\gamma$ (PKC$\gamma$\nomenclature{PKC$\gamma$}{Protein Kinase C$\gamma$}) from the body of a brain cell via a dendrite of large volume into dendritic spines. 
 Dendritic spines are the receiving end of a connection between two brain cells, and PKC$\gamma$ is associated with long term reinforcement of such a connection resulting in learning or associative memory storage. 
 The increased concentration of PKC$\gamma$ in a dendritic spine is measured to around $5\frac{\text{nMol}}{\text{L}}$ which translates to $1-2$ PKC$\gamma$ enzymes in the spine. 
 Seeing as the diffusion equation is derived from a continuous concentration distribution, using it on the enzymes in the spine seems questionable. \\
