made list of abbreviations ++

--- a/doc/latex2/analysis.tex
+++ b/doc/latex2/analysis.tex
@@ -316,7 +316,7 @@ In order to carry out the tests a new initial condition that can easily be recre
 \begin{equation}
  u(t=0,x) = H\left(x-\frac{1}{2}\right)
 \end{equation}
-\noindent $H(x)$ denotes the Heaviside step function defined by its properties
+\noindent Where $H(x)$ denotes the Heaviside step function which is defined by its properties
 \begin{equation}\label{Heaviside_def}
  H(x-a) = \begin{cases}
            1\;\;x > a\\
