wrote first draft for discussion ++

--- a/doc/latex2/thesis.tex
+++ b/doc/latex2/thesis.tex
@@ -101,6 +101,10 @@
 \clearpage
 \include{results}
 
+\chapter{Discussion and conclusion}
+\clearpage
+\include{discussion}
+
 \appendix
 \chapter{Appendix}
 \include{appendix}
