--- a/doc/latex2/analysis.tex
+++ b/doc/latex2/analysis.tex
@@ -1,14 +1,14 @@
-\section{The error estimate}
+\section{Computation of the error}
 
 Solving PDEs numerically will result in errors because derivatives are approximated by finite differences and the PDE is required to be fulfilled only on the mesh points. 
-For the schemes used in this thesis the error, $\epsilon$ will follow equation \eqref{analysis:error}
-
-\begin{equation}\label{analysis:error}
- \epsilon = C_x\Delta x^2 + C_t\Delta t
-\end{equation}
-
-\noindent where the coefficients $C_x$ and $C_t$ are unknown. 
-Notice that there is one term arising from the time derivative and one from the spatial derivative and that they are of different order. 
+% For the schemes used in this thesis the error, $\epsilon$ will follow equation \eqref{analysis:error}
+% 
+% \begin{equation}\label{analysis:error}
+%  \epsilon = C_x\Delta x^2 + C_t\Delta t
+% \end{equation}
+% 
+% \noindent where the coefficients $C_x$ and $C_t$ are unknown. 
+% Notice that there is one term arising from the time derivative and one from the spatial derivative and that they are of different order. 
 
 The error is measured by comparing the result from a numerical simulation to an exact solution, $u_e$ and taking the norm of the difference. 
 Specifically $\epsilon$ is measured by the L2 norm which is defined in equation \eqref{analysis:def_epsilon}
@@ -30,7 +30,6 @@ In these cases the norm of $\epsilon(t)$, defined in eq. \eqref{analysis:converg
 
 This thesis will focus on three verification techniques which are described below. 
 The aim for all of these techniques is to make sure that the implementation is correct by comparing simulations results known to be correct. 
-% The aim for all of these techniques is to make sure that the error term follows equation \eqref{analysis:error}. 
 Since an incorrect implementation of the spatial derivative will cause the solution to be unstable which is easily noticed through visual inspection, the tests will focus on verifying the time derivative. 
 Isolating the contribution to $\epsilon(t)$ from the time derivative will be necessary and is ensured by setting $\Delta t \gg\Delta x^2$. 
 A time step of this size violates the stability criterion for the FE scheme, and so some of the tests are slightly inaccurate for this scheme. \\
@@ -39,32 +38,46 @@ The verification techniques are
 
 \begin{itemize}
  \item Manufactured solutions\\
- By modifying the source term almost any solution can be chosen, hence the name ``manufactured solutions''. 
-%  By choosing an adequate initial condition the exact solution to the diffusion equation can be found with relative ease. 
- The chosen solution is
+ By adjusting the source term, $s$, one can, in principle, choose any solution to the diffusion equation. 
+Should we, for example, want the solution to be $u(x,t) = \frac{1}{x+1}$, all that is needed is to set 
+$$
+s(x,t) = \frac{2D}{(x+1)^3}
+$$
+and the problem is solved (as long as the boundary conditions are correct).
+ For the verifiation that follows, the chosen solution is
  \begin{equation}\label{manufactured_solution}
   u(x,y,t) = e^{-\pi^2t}\cos(\pi x)\cos(\pi y) +1
  \end{equation}
- which requires no source term. 
+ which requires no source term and fulfills the zero flux boundary conditions naturally. 
   The point of these tests is to verify that $\epsilon \sim \Delta t$ and the tests can be done for a time step which fulfills the stability criterion.
   \item Convergence tests \\
-  In the general case the error term is proportional to the time step to some power $r$ when the error from the time derivative is dominant.
-\begin{equation}
- \epsilon \simeq C_t\Delta t^r
+%   In the general case the error term is proportional to the time step to some power $r$ when the error from the time derivative is dominant.
+  In the general case the error term is described by 
+\begin{equation}\label{analysis:error}
+ \epsilon = C_x\Delta x^2 + C_t\Delta t
 \end{equation}
-By comparing the error from two simulations with different time steps the exponent $r$, called the convergence rate, can be found
+where the coefficients $C_x$ and $C_t$ are unknown. 
+Notice that there is one term arising from the time derivative and one from the spatial derivative and that they are of different order. \\
+Where possible, convergence will be tested by having $\Delta t \gg \Delta x^2$, which implies $\Delta x\approx0$ and 
+$$
+\epsilon \propto \Delta t^r
+$$
+where $r=1$. 
+However, for the FE scheme $\Delta t \gg \Delta x^2$ will violate the stability criterion, and a single discretization parameter, $h$, must be introduced by ensuring  
+\begin{equation*}
+ \frac{\Delta t}{\Delta x^2} = k
+\end{equation*}
+$\epsilon(t)$ can now be rewritten by setting $\Delta t = h$
 \begin{align*}
- \epsilon_1 &\simeq C_t\Delta t_1^r\\
-  \epsilon_2 &\simeq C_t\Delta t_2^r
-  \end{align*}
-  the two expressions are divided
-  \begin{align*}
-   \frac{\epsilon_1}{\epsilon_2} &\simeq \frac{C_t\Delta t_1^r}{C_t\Delta t_2^r}\\
-   \log\left(\frac{\epsilon_1}{\epsilon_2}\right) &\simeq r\log\left(\frac{\Delta t_1}{\Delta t_2}\right)\\
+ \epsilon(t) &= C_t h + C_x\frac{h}{k} \\
+ &= (C_t +C_x/k)h = C_k h^r
+\end{align*}
+As $\Delta t$ or $h$ tends to zero, $r$ is expected to converge to one, and that is the purpose of these tests. 
+By comparing the error from two simulations with different time steps, $r$, called the convergence rate, can be measured from 
+ \begin{align*}
    r&\simeq \frac{\log\left(\epsilon_1/\epsilon_2\right)}{\log\left(\Delta t_1/\Delta t_2\right)}
 \end{align*}
-The FE and BE schemes have errors proportional to $\Delta t$ so the tests are expected to measure $r=1$. 
-For these tests it is better if the time step is larger than the stability criterion for the FE scheme.
+
   \item Exact numerical solutions \\
   The numerical schemes are actually reformulations of the PDE we are trying to solve as difference equations which have their own exact solutions. 
   These will be called the numerical exact solutions, and they are slightly different from the exact solutions to the PDE. 
@@ -82,15 +95,15 @@ An important property of the discretization scheme is that the difference betwee
 \begin{equation*}
  \epsilon(t) \sim \mathcal{O}(\Delta t)
 \end{equation*}
-\noindent For the FE scheme a single discretization parameter will be introduced by having a constant relation between the spatial resolution and the time step 
-\begin{equation*}
- \frac{\Delta t}{\Delta x^2} = k
-\end{equation*}
-$\epsilon(t)$ can now be rewritten by setting $\Delta t = h$
-\begin{align*}
- \epsilon(t) &= C_t h + C_x\frac{h}{k} \\
- &= (C_t +C_x/k)h = C_k h
-\end{align*}
+% \noindent For the FE scheme a single discretization parameter will be introduced by having a constant relation between the spatial resolution and the time step 
+% \begin{equation*}
+%  \frac{\Delta t}{\Delta x^2} = k
+% \end{equation*}
+% $\epsilon(t)$ can now be rewritten by setting $\Delta t = h$
+% \begin{align*}
+%  \epsilon(t) &= C_t h + C_x\frac{h}{k} \\
+%  &= (C_t +C_x/k)h = C_k h
+% \end{align*}
 
 Figures \ref{analysis:errorplots:FE} and \ref{analysis:errorplots:BE} show that for both the FE and BE scheme in both 1D and 2D the error is of the expected magnitude. 
 Another interesting property of the error plots is that the error tends to zero after a large number of time steps. 
