--- a/doc/latex2/theory.tex
+++ b/doc/latex2/theory.tex
@@ -2,7 +2,7 @@
 
 A random walker is a point object which after a certain amount of time jumps a fixed step length either right or left with equal probability for jumping either way. 
 In $d$ spatial dimensions the axis on which the jump happens is chosen at random before the direction of the jump is decided. \\
-Say a distribution of random walkers, $C$ is chosen so that all the walkers are placed within an imagined volume, $V$ of arbitrary shape. 
+Say $N$ random walkers are placed at the same position within a volume, $V$ of arbitrary shape, to make a spatial distribution of walkers, $C = N\delta(x)$. 
 $V$ is contained by a surface $S$ and the relation is shown in Figure \ref{theory:divergence_theorem}. 
 
 \begin{figure}[H]
@@ -13,10 +13,15 @@ $V$ is contained by a surface $S$ and the relation is shown in Figure \ref{theor
 \end{figure}
 
 \noindent As the random walkers start to move some of them will leave the volume $V$ which results in a change in $C$. 
-The net movement of random walkers at a point is called the flux of walkers and is denoted by the flux vector $\mathbf J$. 
-To find the number of walkers that leave $V$ we integrate the normal component of $\mathbf J$ over $S$. 
-Assuming that no walkers disappear or are created the flux of walkers leaving $V$ must be balanced by the decrease in $C$, expressed in equation \eqref{theory:diffusion_integral_form}. 
-
+The number of walkers leaving $V$ is described by the change in $C$ integrated over the entire volume.
+\begin{equation}
+ \int_V \frac{\d C}{\d t}\,dV
+\end{equation}
+The number of walkers leaving $V$ can also be described by the number of walkers crossing the surface $S$ in the outward direction, $n$ by integrating the component of the flux of walkers, which is the number of walkers going in a \textcolor{red}{certain direction} per time per area, normal to the surface $S$ over the entire surface.
+\begin{equation}
+ \int_S\vec{J}\cdot \vec{n}\,dS
+\end{equation}
+Since no walkers are created or disappear, the two integrals must be equal.
 \begin{equation}\label{theory:diffusion_integral_form}
  \int_V \frac{\d C}{\d t}\,dV = \int_S\vec{J}\cdot \vec{n}\,dS
 \end{equation}
@@ -39,8 +44,8 @@ The diffusive flux $\mathbf{J}$ is also inserted to yield the diffusion equation
  \frac{\d C}{\d t} = D\nabla^2 C
 \end{equation}
 
-\noindent Throughout this thesis $C$ will denote a spatial distribution of random walkers. 
-$C$ is best illustrated in Figure \ref{theory:illustration_C}.
+\noindent Throughout this thesis $C$ will denote a spatial distribution of random walkers while $u$ will denote the solution to the diffusion equation. 
+The difference between $u$ and $C$ is best illustrated in Figure \ref{theory:illustration_C}.
 
 \begin{figure}[H]
  \centering
@@ -227,17 +232,19 @@ An updated \emph{pseudo coded} scheme is listed in \eqref{block_tridiag_alg}
 floating point operations (FLOPs\nomenclature{FLOPs}{Floating Point Operations (per second)}). 
 This is the maximum efficiency possible for a PDE in $d$ dimensions (without using some form of symmetry argument) and will be the benchmark for the BE scheme as well.\\
 
-Implicit schemes like BE result in linear systems which can be solved by multiplying both sides of the equation with the inverse of the matrix in question. 
-\begin{equation*}
- \mathbf M^{-1}\mathbf M\mathbf u = \mathbf{M}^{-1}\mathbf{up}
-\end{equation*}
-Inverting a dense matrix demands $\mathcal O(n^3)$ FLOPs for an $n\times n$ matrix. 
-By rewriting the previously mentioned $n^2\times n^2$ band diagonal matrix as a block tridiagonal matrix and using the modified block tridiagonal solver we have reduced the demanded number of FLOPs from $\mathcal{O}(n^6)$ to $n\cdot\mathcal{O}(n^3) = \mathcal{O}(n^4)$. 
-Though an improvement of 2 orders is very good, compared to the FE scheme this is still one order larger.
-There is still room for improvement, however. 
-As long as the coefficient matrix is unchanged, which it will be as long as the time step and diffusion constant are constant, the $n$ matrix inversions need only be done once. 
+Implicit schemes like BE result in linear systems which, as mentioned, can always be solved by Gaussian elimination by some $\mathcal O(n^3)$ FLOPs for a $n\times n$ matrix. 
+In d spatial dimensions the matrices are $n^d\times n^d$, meaning that Gaussian elimination will require $\mathcal{O}(n^{3d})$ FLOPs which is extremely inefficient. 
+
+% Implicit schemes like BE result in linear systems which can be solved by multiplying both sides of the equation with the inverse of the matrix in question. 
+% \begin{equation*}
+%  \mathbf M^{-1}\mathbf M\mathbf u = \mathbf{M}^{-1}\mathbf{up}
+% \end{equation*}
+% Inverting a dense matrix demands $\mathcal O(n^3)$ FLOPs for an $n\times n$ matrix. 
+
+The block Tridiagonal solver requires inverting $n$ matrices of size $n^{d-1}\times n^{d-1}$ as well as some matrix-matrix multiplications. 
+All of these steps require $\mathcal O(n^{3d})$ FLOPs, but as long as the coefficient matrix is constant they need only be done once. 
 In other words, the $H_i$ terms from \eqref{block_tridiag_alg} can be stored. 
-The remaining calculations include three matrix vector multiplications, all of which demand $n^2$ FLOPs, thus further reducing the computational cost to $\mathcal{O}(n^2)$ FLOPs which is the same as the FE scheme.
+The remaining calculations include three matrix vector multiplications, all of which demand $n$ FLOPs because the matrices are diagonal, thus further reducing the computational cost to $\mathcal{O}(n^d)$ FLOPs which is the same as the FE scheme.
 
 \section{Combining micro and macro scale models}
 
@@ -252,7 +259,7 @@ After setting an initial condition and diffusion constant the diffusion problem 
 
 \subsection{The conversion between length scales}
 As the previous section states the result from the last PDE time step is converted to a distribution of random walkers. 
-This is done by specifying a conversion rate denoted $Hc$ (as was done by Plapp and Karma \cite{plapp2000multiscale}) which is defined by
+This is done by specifying a conversion rate denoted $Hc$ (as was done by Plapp and Karma \cite{plapp2000multiscale}) which is a single, real integer defined by
 
 \begin{equation}\label{theory:Hc_definition}
  C_{ij} = Hc\cdot u_{ij}
@@ -261,7 +268,7 @@ This is done by specifying a conversion rate denoted $Hc$ (as was done by Plapp 
 \noindent As before $u_{ij}$ is the solution to the 2D diffusion equation evaluated at $x_0 +i\Delta x$ and $y_0 +j\Delta y$, and $C_{ij}$ is the number of random walkers located in the rectangle defined by $x_i\pm\frac{\Delta x}{2}$ and $y_j\pm\frac{\Delta y}{2}$. 
 Walkers are given a random position within this rectangle at the beginning of each PDE time step. 
 
-Equation \eqref{theory:Hc_definition} effectively states that one ''unit`` of the solution $u$ will directly correspond to $Hc$ random walkers.
+Equation \eqref{theory:Hc_definition} effectively states that one ''unit`` of the solution $u$ will directly correspond to $Hc$ random walkers. Depending on the application, $Hc \approx 20-50$.
 
 \subsection{Coupling the models through step length}
 
@@ -279,7 +286,7 @@ Rewriting equation \eqref{theory:einstein_relation} gives the final expression f
  l = \sqrt{2dD\frac{\Delta t}{\tau}}
 \end{equation}
 
-\subsection{Boundary conditions for the random walk}
+\subsection{Boundary conditions for the random walk}\label{theory:BC_RW}
 
 Because the RW area must correspond to an area on the PDE mesh which has a finite, constant size the RW model must have boundary conditions imposed on it. 
 In order to make absolutely sure that no walkers disappear and by extension that the amount of concentration is conserved, perfectly reflecting boundaries are chosen for the RW model. 
@@ -340,8 +347,7 @@ The fluctuations will be reduced by the PDE solver and the solution, though stil
 Section \ref{other_possible_coupling_methods} describes some other methods which were attempted in order to reduce the fluctuations from the RW model.
 
 \subsubsection{Number of time steps on the random walk level}
-
-The reason for introducing a random walk model in the diffusion solver was to represent parts of the mesh at a higher resolution than the rest of the process. 
+The reason for introducing a random walk model in the diffusion solver was to include an area with more advanced dynamics than regular diffusion on a smaller time-, and length scale. 
 This means that the RW solver must take $\tau$ time steps for each PDE time step. 
 $\tau$ could in principle be any integer, but should be chosen large enough so the central limit theorem is satisfied. 
 This usually means $\tau\geq50$. \\
@@ -367,21 +373,30 @@ As it turns out it is sufficient to simply replace the PDE solution with the RW 
 There are however some other ways to do this which have been tested, and found inadequate or simply been disregarded. Three of these are mentioned below. 
 \begin{itemize}
  \item Averaging the two solutions \\
+ Doing the arithmetic mean of the two solutions will reduce the magnitude of the fluctuations, as shown in Figure \ref{theory:average}. 
  This method is simple and reduces fluctuations by approximately one half (approximately because fluctuations will be present after the first time step). 
+ \begin{figure}[h]
+  \centering
+  \includegraphics[width=0.7\textwidth]{Figures/average.eps}
+  \caption[Idea behind averaging solutions]{This plot shows the PDE solution before and after the stochastic solver has been called, and the arithmetic mean of the two solutions which has fluctuations of smaller amplitude.}
+  \label{theory:average}
+ \end{figure}
+
  The reason an average was scraped is simply that results just as good were achieved by only replacing the solution.
  \item Polynomial regression \\
- \emph{\textcolor{red}{Explain what polynomial regression is??}}
+%  \emph{\textcolor{red}{Explain what polynomial regression is??}}
  In order to smoothen out the solution from the RW model a polynomial regression function was tested. 
  The principle was to look at the solution from the RW model as a set of data points which have some dependency on their position on the PDE mesh. 
  Figure \ref{theory:polyreg} shows how this method worked for a slightly exaggerated case. 
- \begin{figure}[H]
+ \begin{figure}[h]
  \centering
  \includegraphics[width=0.7\textwidth]{Figures/polyreg.png}
- \caption{}
+ \caption[Combination by polynomial regression]{This plot shows the PDE solution before and after the stochastic solver has been called, and a polynomial regression of degree 6 using $C(x,t)$ as data points. }
+%  As is apparent there is no energy conservation when using polynomial regression}
  \label{theory:polyreg}
  \end{figure}
  This approach turns out to have two problems; first and foremost the amount of concentration is no longer conserved, secondly the endpoints are usually way off.
  \item Cubic spline interpolation \\
- \emph{\textcolor{red}{Explain what cubic spline is??}} 
+%  \emph{\textcolor{red}{Explain what cubic spline is??}} 
  Cubic spline interpolation has the same problem as polynomial regression when it comes to conserving energy.
 \end{itemize}
