think I fixed derivation of diffusion equation

--- a/doc/latex2/analysis.tex
+++ b/doc/latex2/analysis.tex
@@ -192,7 +192,9 @@ Figures \ref{analysis:convergence_tests:FE} and \ref{analysis:convergence_tests:
  \caption[Spatial error test for the BE scheme]{This figure shows the error from the spatial derivative (a) and the corresponding convergence test. For the smallest $\Delta x$ the spatial error is no longer completely dominant which explains the poorer convergence.}
  \label{analysis:spatial_convergence_tests}
 \end{figure}
-\subsection{Verification of FE scheme by exact numerical solution}
+
+
+\subsection{Verification of FE scheme by exact numerical solution}\label{exact_numerical_solution}
 
 Discretization of the diffusion equation by the FE scheme yields the following numerical scheme in 1D
 \begin{equation}
